@@ -5,7 +5,8 @@ TODO list for ph-scale (HTML5)
 IMPLEMENTATION
 
 HIGH
-- Custom: add interactivity to H3O+ and OH- indicators in log graph
+- move responsibility of creating 'custom' solute from Solution setters to LogarithmicGraph?
+- Custom: debug interactivity of graph indicators
 - Custom: when beaker is empty, disable interactive graph indicators and position at zero
 - limit range of interactive indicators so that pH stays in range [-1,15]
 - 'H3O+/OH- ratio' feature
