@@ -1,3 +1,4 @@
+1/14/14 Custom: first attempt at making graph indicators interactive, has some range problems
 1/14/14 throw an Error when attempting to construct a Solute with a pH value that is out of range
 1/14/14 use linkAttribute to wire up view properties that control visibility
 1/14/14 use 'children' option to add nodes to each ScreenView's rootNode
